<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Values -->
    <string name="app_name">TicTac2</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="close_text">Are you sure, you want to quit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="logo">TicTac2</string>
    <string name="about_text">TicTac2 v2.0\nRelease Edition\n\nContributors:\n<a href="http://benjaminaaron.wordpress.com/">benjaminaaron</a>\n<a href="http://bbuecherl.tk">bbuecherl</a>\n<a href="https://github.com/TuttiRH">tuttirh</a>\n<a href="https://github.com/gherndl">gherndl</a>\n\nProject on GitHub:\n<a href="https://github.com/bbuecherl/tictac2/">https://github.com/bbuecherl/tictac2</a>\n\nSounds from <a href="http://freesound.org">http://freesound.org/</a></string>
	<string name="ok">OK</string>
	<string name="share">Share</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	
	<!-- TODO -->
	<string name="todo">This feature is coming soon&#8230;</string>
	
    <!-- Placeholder -->
    <string name="placeholder">{Placeholder}</string>
    
    <!-- Menu Activity -->
    <string name="menu_subtitle">Menu</string>
    <string name="menu_singleplayer">Singleplayer</string>
    <string name="menu_local">Local Multiplayer</string>
    <string name="menu_online">Online Multiplayer</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_ranks">Ranks</string>

    <!-- Preferences -->
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_desc">Enable for sound effects</string>
    <string name="pref_vibrate">Vibration</string>
    <string name="pref_vibrate_desc">Enable for physical feedback</string>
	<string name="pref_player">Your name</string>
	<string name="pref_player_desc">Your displayed username</string>
	<string name="pref_player_default">Player</string>
	<string name="pref_mark">Mark appearance</string>
	<string name="pref_mark_desc">Choose a mark or create your own</string>
	<string name="pref_mark_add">Create own</string>
	<string name="pref_color_me">Your mark color</string>
	<string name="pref_color_me_desc">Color your captured fields will be displayed in</string>
	<string name="pref_color_other">Your enemies mark color</string>
	<string name="pref_color_other_desc">Color your enemies fields will be displayed in</string>
	<string-array name="pref_color_entries">
	    <item>Green</item>
	    <item>Red</item>
	    <item>Blue</item>
	</string-array>
    <string-array name="pref_color_values">
        <item>#007200</item>
        <item>#720000</item>
        <item>#000072</item>
    </string-array>
    <string name="pref_quickmode">Turn time</string>
    <string name="pref_quickmode_desc">Time for a turn in quick mode</string>
    <string-array name="pref_quickmode_entries">
        <item>1 Seconds</item>
        <item>2 Seconds</item>
        <item>5 Seconds</item>
        <item>10 Seconds</item>
    </string-array>
    <string-array name="pref_quickmode_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    
    <!-- Mark Creator Activity -->
	<string name="markcreator">Markcreator</string>
	<string name="mark_name">Name your mark</string>
    <string name="mark_rect">Rectangle</string>
    <string name="mark_circle">Circle</string>
    <string name="mark_select">Select</string>
    <string name="mark_drag">Move</string>
    <string name="mark_resize">Resize</string>
    <string name="mark_rotate">Rotate</string>
    <string name="mark_delete">Delete</string>
    <string name="mark_save">Save</string>
	
    <!-- Opt Activity -->
    <string name="opt_subtitle">Game settings</string>
    <string name="opt_boardsize_prompt">Choose board size</string>
    <string name="opt_winlength_prompt">Choose win length</string>
    <string name="opt_mpr_prompt">Choose marks per round</string>
    <string name="opt_name">Guest players name</string>
    <string name="opt_default">Guest</string>
    <string name="opt_start">Who starts the game</string>
    <string name="opt_random">Random</string>
    <string name="opt_bot">Computer</string>
    <string name="opt_quickmode">Quickmode</string>
    <string name="opt_botint">Computer intelligence</string>
    <string name="opt_botint_weak">Weak (placing random)</string>
    <string name="opt_botint_med">Medium (predecision grids)</string>
    <string name="opt_botint_hard">Hard (decision tree)</string>
    
    
    <!-- Game Activity -->
    <string name="game_won">You won!</string>
    <string name="game_over">Game over!</string>
    <string name="game_whowon">Game has been finished, {win} won the game.</string>
    <string name="game_noone">no one</string>
    <string name="pause">Game Paused</string>
    <string name="pause_text">Do you really want to close the game?</string>
    <string name="resume">Resume</string>
</resources>