<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
	<CheckBoxPreference
    	    android:key="pref_sound"
        	android:title="@string/pref_sound"
        	android:summary="@string/pref_sound_desc"
        	android:defaultValue="true" />
	<CheckBoxPreference
        	android:key="pref_vibrate"
        	android:title="@string/pref_vibrate"
        	android:summary="@string/pref_vibrate_desc"
        	android:defaultValue="true" />
	<EditTextPreference 
     		android:key="pref_player"
     		android:title="@string/pref_player"
     		android:summary="@string/pref_player_desc"
     		android:defaultValue="Me" />
	<tk.agarsia.tictac2.view.options.MarkListPreference 
	    	android:key="pref_mark" 
	    	android:title="@string/pref_mark"
	    	android:summary="@string/pref_mark_desc"
	    	android:defaultValue="0" />
	<ListPreference
	    	android:key="pref_color_me"
	    	android:title="@string/pref_color_me"
	    	android:summary="@string/pref_color_me_desc"
	    	android:entries="@array/pref_color_entries"
	    	android:entryValues="@array/pref_color_values"/>
	<ListPreference
	    	android:key="pref_color_other"
	    	android:title="@string/pref_color_other"
	    	android:summary="@string/pref_color_other_desc"
	    	android:entries="@array/pref_color_entries"
	    	android:entryValues="@array/pref_color_values" />
	<ListPreference 
	    	android:key="pref_quickmode"
	    	android:title="@string/pref_quickmode"
	    	android:summary="@string/pref_quickmode_desc"
	    	android:defaultValue="5"
	    	android:entries="@array/pref_quickmode_entries"
	    	android:entryValues="@array/pref_quickmode_values" />
</PreferenceScreen>
