<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/opt_quickmode_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/opt_quickmode" />

            <ToggleButton
                android:id="@+id/opt_quickmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/opt_quickmode" />
	 
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_boardsize_prompt" />

        <Spinner
            android:id="@+id/opt_boardsize_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/opt_boardsize_prompt" />

        <tk.agarsia.tictac2.view.Space
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_winlength_prompt" />

        <Spinner
            android:id="@+id/opt_winlength_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/opt_winlength_prompt" />

        <tk.agarsia.tictac2.view.Space
            android:id="@+id/space2"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_mpr_prompt" />

        <Spinner
            android:id="@+id/opt_mpr_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/opt_mpr_prompt" />

        <tk.agarsia.tictac2.view.Space
            android:id="@+id/space3"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/opt_botint_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_botint" />

            <RadioGroup
            android:id="@+id/opt_botint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <RadioButton
	                android:id="@+id/opt_botint_weak"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
                	android:checked="true"
	                android:text="@string/opt_botint_weak" />
	
	            <RadioButton
	                android:id="@+id/opt_botint_med"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/opt_botint_med" />
	
	            <RadioButton
	                android:id="@+id/opt_botint_hard"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/opt_botint_hard" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/opt_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_name" />

        <EditText
            android:id="@+id/opt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/opt_default" />

        <tk.agarsia.tictac2.view.Space
            android:id="@+id/space4"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_start" />

        <RadioGroup
            android:id="@+id/opt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/opt_start_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/placeholder" />

            <RadioButton
                android:id="@+id/opt_start_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_default" />

            <RadioButton
                android:id="@+id/opt_start_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_random" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>